# viennamini-dev

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.txt
auxiliary/: materials.xml  units-common.xml  units-viennastar.xml  units.xml
cmake/: FindViennaCL.cmake  FindViennaData.cmake  FindViennaDeviceCollection.cmake  FindViennaGrid.cmake  FindViennaMaterials.cmake  FindViennaMath.cmake  FindViennaMesh.cmake  GetViennaCL.cmake  GetViennaData.cmake  GetViennaFVM.cmake  GetViennaGrid.cmake  GetViennaMaterials.cmake  GetViennaMath.cmake  GetViennaMesh.cmake
examples/: 1d_capacitor.cpp  2d_capacitor.cpp  2d_diode_nin.cpp  2d_mos.cpp  2d_mosfet.cpp  2d_mosfet.xml  3d_mosfet.cpp  3d_mosfet_trigate_1.cpp  3d_mosfet_trigate_2.cpp  3d_mosfet_utb_soi.cpp  All_Around_Gate2.cpp  Bulk_Tri_Gate.cpp  Bulk_Tri_Gate2.cpp  CMakeLists.txt  Double_Gate_FinFET.cpp  Double_Gate_FinFET2.cpp  Double_Gate_MOSFET.cpp  Double_Gate_MOSFET2.cpp  Double_Gate_MOSFET3.cpp  Double_Gate_MOSFET_with_asymmetric_oxide_thickness.cpp  Four_Gate.cpp  MOSFET.cpp  Message_Double_Gate_FinFET2.txt  Message_Double_Gate_MOSFET.txt  Message_Single_Gate.txt  Omega_Gate.cpp  Pi_Gate.cpp  Single_Gate.cpp  Tri_Gate2.cpp  Tri_Gate3.cpp  Tri_Gate4.cpp  Tri_Gate5.cpp  capacitor2d.cpp  device_generator.cpp  diode_np2d_characteristics.cpp  materials.xml  materials_dev.xml  mos2d.cpp  mosfet.cpp  mosfet2d_poisson_dd_np.cpp  (+14 more)
examples/tutorial/: mosfet.cpp  nin2d.cpp  trigate.cpp
old/: poisson_dd-np.hpp  problem.hpp
src/: config.cpp  configuration.cpp  configure_simulator.cpp  configure_simulator_xml.cpp  contact_model.cpp  device.cpp  discretization.cpp  generate_discretization.cpp  generate_pde_set.cpp  material_library.cpp  pde.cpp  pde_set.cpp  problem.cpp  quantity.cpp  quantity_converter.cpp  quantity_generator.cpp  simulator.cpp  simulator.tpp  simulator_tetrahedral3d.cpp  simulator_triangular2d.cpp  simulator_triangular3d.cpp  stepper.cpp  value_accessor.cpp  viennamini_app.cpp
src/configs/: linear_solver.cpp  model.cpp  nonlinear_solver.cpp
src/contact_models/: ohmic_contact.cpp
src/pde_sets/: drift_diffusion.cpp  laplace.cpp
src/quantity_generators/: builtin_potential.cpp  use_quantity.cpp
src/units/: udunits.cpp
templates/: capacitor1d.hpp  capacitor2d.hpp  capacitor3d.hpp  diode_np2d.hpp
tests/: CMakeLists.txt  test_capacitor_1d.cpp  test_capacitor_2d.cpp
viennamini/: config.hpp  configuration.hpp  configure_simulator.hpp  configure_simulator_xml.hpp  constants.hpp  contact_model.hpp  csv.hpp  data_table.hpp  detect_interfaces.hpp  device.hpp  device_collection.hpp.in  device_old.hpp  device_segment_parameters.hpp  device_template.hpp  device_template_capacitor2d.hpp  discretization.hpp  forwards.h  fwd.h  generate_discretization.hpp  generate_pde_set.hpp  generic_mesh.hpp  initial_guess.hpp  io.hpp  material_accessors.hpp  material_library.hpp  materials.hpp  pde.hpp  pde_set.hpp  physics.hpp  post_processing.hpp  prepare_poisson_drift_diffusion_np.hpp  problem.hpp  problem_laplace.hpp  problem_poisson_dd-np.hpp  quantity.hpp  quantity_converter.hpp  quantity_generator.hpp  result_accessor.hpp  scale.hpp  simulator.hpp  (+2 more)
viennamini/configs/: linear_solver.hpp  model.hpp  nonlinear_solver.hpp
viennamini/contact_models/: ohmic_contact.hpp
viennamini/discretizations/: fvm.hpp
viennamini/initial_guess/: builtin_potential.hpp  quantity.hpp
viennamini/materials/: README.txt
viennamini/pde_sets/: drift_diffusion.hpp  laplace.hpp
viennamini/postprocessing/: electric_field.hpp
viennamini/problems/: laplace.hpp  poisson_dd-np.hpp
viennamini/quantity_generators/: builtin_potential.hpp  use_quantity.hpp
viennamini/templates/: capacitor1d.hpp  capacitor2d.hpp  capacitor3d.hpp
viennamini/units/: udunits.hpp
viennamini/utils/: average.hpp  convert.hpp  enable_if.hpp  environment.hpp  factory_producible.hpp  file_extension.hpp  filter.hpp  is_zero.hpp  shared_ptr.hpp  smart_ptr.hpp  string.hpp  timer.hpp
